--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
               <a class="links link" href="index.html">Studio</a>
             </li>
             <li class="nav">
-              <a class="links link-portfolio" href="portfolio.html"
+              <a class="links link-portfolio link-current" href="portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -66,12 +66,19 @@
         <ul class="cards">
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Banking App Interface Concept</h4>
                 <p class="project-section">App</p>
@@ -80,12 +87,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Cashless Payment</h4>
                 <p class="project-section">Marketing</p>
@@ -94,12 +108,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Meditation App</h4>
                 <p class="project-section">App</p>
@@ -108,12 +129,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Taxi Service</h4>
                 <p class="project-section">Marketing</p>
@@ -122,12 +150,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Screen Illustrations</h4>
                 <p class="project-section">Design</p>
@@ -136,12 +171,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Online Courses</h4>
                 <p class="project-section">Marketing</p>
@@ -150,12 +192,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Instagram Stories Concept</h4>
                 <p class="project-section">Design</p>
@@ -164,12 +213,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Organic Food</h4>
                 <p class="project-section">Web Site</p>
@@ -178,12 +234,19 @@
           </li>
           <li>
             <figure class="project-card">
-              <img
-                src="images/portfolio/img.9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
+              <div class="card-wrapper">
+                <img
+                  src="images/portfolio/img.9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay card-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <figcaption>
                 <h4 class="project">Fresh Coffee</h4>
                 <p class="project-section">Web Site</p>
